--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,3 +24,10 @@ jobs:
           EMAIL_RECIPIENT: ${{secrets.EMAIL_RECIPIENT}}
           MAILGUN_API_KEY: ${{secrets.MAILGUN_API_KEY}}
         run: python JHU_Update.py
+      - name: Commit
+        run: |
+          git config --global user.email ${{ secrets.EMAIL }}
+          git config --global user.name ${{ secrets.NAME }}
+          git add .
+          git commit -m 'Update CSV file'
+          git push origin main
