--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,5 +29,5 @@ jobs:
           git config --global user.email ${{ secrets.EMAIL }}
           git config --global user.name ${{ secrets.NAME }}
           git add .
-          git commit -m 'Update csv file'
+          git commit -m 'Update CSV file'
           git push origin main
